# ml-lib

./: linear_regression.py  main.py  pyproject.toml
src/examples/linear_regression_gradient_descent/: __init__.py
src/linear_regression_gradient_descent/: __init__.py  linear_regression.py  main.py
src/ml_lib/: linear_regression.py
