[project]
name = "linear-regression-gradient-descent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marlon", email = "marlonvcendron@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.1",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
]

[project.scripts]
linear-regression-gradient-descent = "linear_regression_gradient_descent:package_main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.basedpyright]
reportAny = false
reportConstantRedefinition = false
reportUnknownMemberType = false